fix arrow z-index

--- a/docs/css/common.css
+++ b/docs/css/common.css
@@ -70,6 +70,7 @@ nav#nav-bar a { color: #7ac1eb; }
   border-style: solid;
   border-width: 1rem;
   border-color: transparent transparent #333 transparent;
+  z-index: 99;
 }
 
 [data-tooltip]:after {
